# Discord_BotAI

./: .env.example  .gitignore  README.md  conftest.py  main.py  main_test.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: daily_report.py  handlers.py  llama_integration.py  models.py  request.py  requests.py  scheduler.py  weather.py  weather_agent.py
app/cogs/: admin.py  commands.py  error_handler.py  general.py  ranks.py  toxic.py  youtube.py
app/core/: ai_config.py  bot.py  checks.py  embeds.py  handlers.py  scheduler.py
app/data/: models.py  request.py
app/mcp/: __init__.py  server.py  server_search.py  server_weather.py
app/services/: daily_report.py  holiday.py  llama_integration.py  telegram_notifier.py  weather_agent.py  youtube_notifier.py
app/tools/: prompt.py  utils.py
tests/: __init__.py  test_ai_config.py  test_commands.py  test_daily_report.py  test_handlers.py  test_prompt.py  test_telegram_manual.py  test_telegram_notifier.py  test_utils.py
