[project]
name = "discord-botai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "apscheduler~=3.11.0",
    "asyncpg~=0.30.0",
    "discord~=2.3.2",
    "discord-py~=2.5.2",
    "dotenv~=0.9.9",
    "openai~=1.93.0",
    "python-dotenv~=1.1.1",
    "pytz~=2025.2",
    "sqlalchemy~=2.0.42",
    "tiktoken~=0.9.0",
]

[tool.ruff]
line-length = 101
fix = true

[tool.ruff.lint]
extend-select = ["E501", "UP", "D", "I", "ANN001", "ANN201"]
ignore = ["D100"]

[tool.ruff.format]
docstring-code-line-length = 100
#quote-style = "single"