[project]
name = "discord-botai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler~=3.11.0",
    "asyncpg~=0.30.0",
    "chromadb~=1.0.20",
    "discord~=2.3.2",
    "discord-py~=2.5.2",
    "dotenv~=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.7",
    "llama-index>=0.13.6",
    "llama-index-core~=0.13.6",
    "llama-index-embeddings-openai>=0.5.0",
    "llama-index-vector-stores-chroma~=0.5.2",
    "openai~=1.93.0",
    "pyowm>=3.5.0",
    "python-dotenv~=1.1.1",
    "pytz~=2025.2",
    "requests>=2.32.5",
    "sqlalchemy~=2.0.42",
    "tiktoken~=0.9.0",
]

[tool.ruff]
line-length = 101
fix = true

[tool.ruff.lint]
extend-select = ["E501", "UP", "D", "I", "ANN001", "ANN201"]
ignore = ["D100"]

[tool.ruff.format]
docstring-code-line-length = 100
#quote-style = "single"