[project]
name = "discord-botai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "apscheduler~=3.11.0",
    "asyncpg~=0.30.0",
    "chromadb~=1.0.20",
    "discord-py~=2.5.2",
    "feedparser>=6.0.12",
    "httpx~=0.28.1",
    "llama-index-core~=0.13.6",
    "llama-index-embeddings-openai>=0.5.0",
    "llama-index-vector-stores-chroma~=0.5.2",
    "mcp[cli]>=1.0.0",
    "openai~=1.93.0",
    "pillow~=11.3.0",
    "python-dotenv~=1.1.1",
    "pytz~=2025.2",
    "sqlalchemy~=2.0.42",
    "tavily>=1.1.0",
    "tiktoken~=0.9.0",
    "griffe>=2.0.0",
]

[tool.ruff]
line-length = 101
fix = true

[tool.ruff.lint]
extend-select = ["E501", "UP", "D", "I", "ANN001", "ANN201"]
ignore = ["D100", "D203", "D213"]

[tool.ruff.format]
docstring-code-line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
